new pf structure

--- a/templates/resume2025/index.ejs
+++ b/templates/resume2025/index.ejs
@@ -56,9 +56,9 @@
         <div class="Grid-cell">
           <div class="element">
             <h4 class="textItalic TextPoppins fontWeight300 ">Strategic UX Focus Areas</h4>
-            <h5 class="textItalic TextPoppins fontWeight200 ">&#9999; Platform Infrastructure → Platform Design / Partner Infrastructure</h5>
-            <h5 class="textItalic TextPoppins fontWeight200 ">&#9999; Conversion-Driven B2C UX → Consumer Experience / B2C Growth </h5>
-            <h5 class="textItalic TextPoppins fontWeight200 ">&#9999; Journey Systems → Strategic Systems / Experience Architecture</h5>
+            <h5 class="textItalic TextPoppins fontWeight200 "> ➢ Platform Design → Partner Tools / Admin Systems</h5>
+            <h5 class="textItalic TextPoppins fontWeight200 "> ➢ Conversion-Driven B2C UX → Consumer Experience / B2C Growth </h5>
+            <h5 class="textItalic TextPoppins fontWeight200 "> ➢ Experience Architecture → Cross-surface UX Logic, End-to-End Friction Reduction</h5>
 
 
 
@@ -162,8 +162,8 @@
 
             <h6 class="fontWeight500"> 📦 Platform Design / Partner Infrastructure</h6>
             <ul class="listCircle">
-              <li class="listLoose">Rebuilt onboarding from a rigid 30+ screen flow into a modular, category-aware system, enabling faster signups and scaling across Baby, Mobility, and Party rentals.</li>
-              <li class="listLoose">Designed adaptive onboarding with smart defaults and category-based logic (e.g., insurance, background check).</li>
+              <li class="listLoose">Rebuilt onboarding from a linear 30+ screen flow into a modular, category-aware system, enabling faster signups and scaling across Baby, Mobility, and Party rentals.</li>
+              <li class="listLoose">Designed scalable inventory tool to support high-volume QPs and reduce edit friction.</li>
               <li class="listLoose">Overhauled B2B inventory tools to support partner scaling and reduce edit friction by 70%.
               </li>
               <li class="listLoose">Result: Reduced CS load, improved go-live clarity, and enabled GoQuip launch with no new engineering.
@@ -171,7 +171,7 @@
             </ul>
             <h6 class="fontWeight500"> 🛒 Consumer Experience / B2C Growth</h6>
             <ul class="listCircle">
-              <li class="listLoose">Shifted rental flow from provider-first to gear-first, increasing conversion by 7% and AOV by 12%.</li>
+              <li class="listLoose">Shifted rental flow from provider-first to gear-first, increasing conversion by 27% and AOV by 12%.</li>
               <li class="listLoose">Redesigned mobile cart, QP selection, and checkout into a streamlined single-page flow.</li>
               <li class="listLoose">Enabled exploration-first gear discovery to boost product views and user confidence.</li>
             </ul>
