--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -3,7 +3,7 @@
 <!--Head-->
 <%- include(`${templatePath}/shared/head`, {SEO:true, Title:'Vicky W. | UX Designer', 
   description:'Vicky Wang is a UX designer specializing in B2B SaaS and consumer platforms—crafting scalable, user-friendly solutions for complex workflows.', 
-  pageURL:'', thumbnailImgURL: 'vickywang_photography.png'
+  pageURL:'', thumbnailImgURL: 'vickywang.svg'
   }) %>
 <!--Head-->
 
