--- a/templates/resume2025/index.ejs
+++ b/templates/resume2025/index.ejs
@@ -152,7 +152,7 @@
             <h6 class="textItalic">Oct. 2024 - Present, Full-Time</h6>
             <h6 class="textItalic TextPoppins fontWeight300">Led UX architecture across mobile and partner tools, collaborating with a graphic designer and VP of Product to align design and product goals.</h6>
 
-            <h6 class="fontWeight500"> ➢ Platform Design / Partner Infrastructure</h6>
+            <h6 class="fontWeight500"> ➢ Platform Design / B2B Systems</h6>
             <ul class="listCircle">
               <li>Rebuilt onboarding from a rigid 30+ screen flow into a modular, category-aware system to enable faster signups and scalable expansion across Baby, Party, and future Mobility rentals.</li>
               <li>Designed scalable inventory tools to support high-volume QPs and reduce edit friction by 70%.</li>
