new landing page

--- a/templates/workshelf/index.ejs
+++ b/templates/workshelf/index.ejs
@@ -121,6 +121,8 @@
       <div class="Grid Grid--full Grid--gutter">
         <div class="Grid-cell">
           <div class="element">
+            <div class="blankHXXS"></div>
+
             <h3><span class=" fontWeight700">Platform Design / B2B Systems </span></h3>
             <h4><span class=" fontWeight300 textItalic">Scalable UX for providers and internal tools—designed for system control, not just UI polish.</span></h4>
 
@@ -145,11 +147,9 @@
           </div>
         </div>
         <div class="accContent">
-          <div class="Grid Grid--full Grid--gutter">
-            <div class="Grid-cell">
-              <div class="element">
-                <img class="modal-target" src="cover_inventory_management.svg" alt="">
-              </div>
+          <div class="Grid-cell">
+            <div class="element">
+              <img class="modal-target" src="cover_inventory_management.svg" alt="">
             </div>
           </div>
 
@@ -157,7 +157,7 @@
             <div class="Grid-cell">
               <div class="element">
 
-                <h6> <span class="colorBgYellowVW100 borderRadiusS chipBorderPadding"> Role:</span> Lead UX · Redesign from structural level</h6>
+                <h6> <span class="colorBgYellowVW100 borderRadiusS chipBorderPadding"> Role:</span> Lead UX</h6>
               </div>
             </div>
             <div class="Grid-cell">
@@ -234,11 +234,9 @@
           </div>
         </div>
         <div class="accContent">
-          <div class="Grid Grid--full Grid--gutter">
-            <div class="Grid-cell">
-              <div class="element">
-                <img class="modal-target" src="cover_inventory_management.svg" alt="">
-              </div>
+          <div class="Grid-cell">
+            <div class="element">
+              <img class="modal-target" src="cover_inventory_management.svg" alt="">
             </div>
           </div>
 
@@ -310,7 +308,7 @@
     <div class="wrapper">
       <div class="accItem">
         <div class="Grid Grid--full Grid--gutter Grid--top accTrigger">
-          <div class="Grid-cell">
+          <div class="Grid-cell accTrigger">
             <div class="element">
               <div class="row">
                 <div class="">
@@ -324,11 +322,9 @@
           </div>
         </div>
         <div class="accContent">
-          <div class="Grid Grid--full Grid--gutter">
-            <div class="Grid-cell">
-              <div class="element">
-                <img class="modal-target" src="cover_inventory_management.svg" alt="">
-              </div>
+          <div class="Grid-cell">
+            <div class="element">
+              <img class="modal-target" src="cover_inventory_management.svg" alt="">
             </div>
           </div>
 
