--- a/templates/workshelf/index.ejs
+++ b/templates/workshelf/index.ejs
@@ -308,7 +308,7 @@
     <div class="wrapper">
       <div class="accItem">
         <div class="Grid Grid--full Grid--gutter Grid--top accTrigger">
-          <div class="Grid-cell accTrigger">
+          <div class="Grid-cell">
             <div class="element">
               <div class="row">
                 <div class="">
