--- a/templates/resume2025/index.ejs
+++ b/templates/resume2025/index.ejs
@@ -67,18 +67,17 @@
 
 
             <h5 class="fontWeight500">University of California, Berkeley </h5>
-            <h6 class="fontWeight300">Master of Architecture | <span class="textItalic fontWeight300"> 3-Year Program</span></h6>
-            <h6 class="textItalic"> Aug. 2015 - May 2017 | Aug. 2018 - May 2019</h6>
-            <h6> Architecture & Building Science/Technology
-            </h6>
+            <h6 class="fontWeight300">Master of Architecture | <span class="textItalic fontWeight300"> Architecture & Building Science/Technology</span></h6>
+            <h6 class="textItalic"> Aug. 2015 - May 2017</h6>
+            <h6 class="textItalic"> Aug. 2018 - May 2019</h6>
+
 
             <div class="blankHTiny"></div>
 
             <h5 class="fontWeight500">Beijing University of Technology </h5>
 
-            <h6 class="fontWeight300">Bachelor of Art | <span class="textItalic fontWeight300"> 4-Year Program</span></h6>
-            <h6 class="textItalic"> September 2009 - July 2013</h6>
-            <h6> Art &amp; Design &amp; Landscape Design </h6>
+            <h6 class="fontWeight300">Bachelor of Art | <span class="textItalic fontWeight300"> Art &amp; Design &amp; Landscape Design</span></h6>
+            <h6 class="textItalic"> Sep. 2009 - Jul. 2013</h6>
             <div class="blankHTiny"></div>
 
             <h5 class="fontWeight500">Certifications </h5>
