--- a/templates/main.css
+++ b/templates/main.css
@@ -66,6 +66,9 @@
   --VW--Pink800: #e40074;
   --VW--Pink200: #fff1f7;
 
+  --VW--YellowTrans: rgba(255, 180, 0, 0.05);
+
+
   --VW--Yellow900: #e7a200;
   --VW--Yellow700: #ffb400;
   /* main */
@@ -850,6 +853,10 @@ body::-webkit-scrollbar-thumb:hover {
 
 .colorBgVW {
   background-color: var(--VW--Grey2024);
+  margin: 0 auto;
+}
+.colorBgImg {
+  background-color: var(--VW--YellowTrans);
   margin: 0 auto;
 }
 
@@ -5206,6 +5213,10 @@ ul.iconx {
   background-color: rgba(255, 255, 255, 0.98);
   /* Black w/ opacity */
 }
+.modal.show {
+  display: block;
+}
+
 
 .modal-content {
   position: absolute;
@@ -5213,7 +5224,7 @@ ul.iconx {
   left: 50%;
   transform: translate(-50%, -50%);
   width: 95%;
-  height: [YourHeightValue];
+  height: auto;
   opacity: 1 !important;
 }
 
