--- a/templates/workshelf/index.ejs
+++ b/templates/workshelf/index.ejs
@@ -167,19 +167,20 @@
               </div>
 
               <div class="element">
-                <img class="modal-target" src="diagram_inventory_management_before.svg" alt="">
+                <img class="modal-target" src="diagram_inventory_management_before.svg" alt="Legacy inventory UX">
                 <h5 class="fontWeight600">Category Navigation</h5>
-                <h6>Click & Click ... Back & Start Over</h6>
+                <h6>Category navigation required restarting each time. No persistent filters. 5 clicks to edit gear.</h6>
 
                 <!-- Trigger -->
                 <a href="#" class="open-modal textUnderline" data-modal="modal1">
-                  <h5 class="fontWeight400">View legacy UX screenshot</h5>
+                  <h5 class="fontWeight400">View legacy UX</h5>
                 </a>
                 <!-- Modal 1 -->
                 <div id="modal1" class="modal hidden">
                   <span class="modal-close">
                     <img class="iconXforModal" src="../icon/delete.svg" alt="×">
                   </span>
+
                   <div class="modal-content">
                     <p>This is Modal 1 content.</p>
                   </div>
@@ -194,12 +195,13 @@
                 <h6 class="fontWeight600 textItalic colorYellowVW700"> Design Update</h6>
               </div>
               <div class="element">
-                <img class="modal-target" src="diagram_inventory_management_after.svg" alt="">
+                <img class="modal-target" src="diagram_inventory_management_after.svg" alt="Redesigned inventory UX">
                 <h5 class="fontWeight600">Unified Inventory</h5>
-                <h6>Filter & Scan</h6>
+                <h6>Unified view, persistent filters, inline actions. Scaled for high-volume QPs.</h6>
+
                 <!-- Trigger 1 -->
                 <a href="#" class="open-modal textUnderline" data-modal="modal2">
-                  <h5 class="fontWeight400">View design update</h5>
+                  <h5 class="fontWeight400">View new UX</h5>
                 </a>
                 <!-- Modal 2 -->
                 <div id="modal2" class="modal hidden">
