--- a/templates/workshelf/index.ejs
+++ b/templates/workshelf/index.ejs
@@ -142,7 +142,7 @@
 
     <div class="wrapper">
       <div class="accItem">
-        <div class="Grid Grid--full Grid--gutter Grid--top accTrigger">
+        <div class="Grid Grid--gutter Grid--top accTrigger">
           <div class="Grid-cell">
             <div class="element">
               <div class="row">
@@ -150,7 +150,7 @@
                   <h4 class="fontWeight400"><a title="View full context, metrics, and case breakdown" class="textUnderline" href="">BabyQuip Inventory Management (Partner Portal)</a></h4>
                   <h5>Redesigned the entire inventory control system to scale from hobbyist QPs to power users. Unified navigation, added inline controls, and increased efficiency 3×.</h5>
                 </div>
-                <div class="accIcon iconAccTrigger align-right"></div>
+                <div class="accIcon align-right"></div>
               </div>
             </div>
           </div>
@@ -277,7 +277,7 @@
 
     <div class="wrapper">
       <div class="accItem">
-        <div class="Grid Grid--full Grid--gutter Grid--top accTrigger">
+        <div class="Grid Grid--gutter Grid--top accTrigger">
           <div class="Grid-cell">
             <div class="element">
               <div class="row">
@@ -286,7 +286,7 @@
                   <h5>Replaced a rigid 30+ screen flow with a modular, category-aware system that adapts by provider type and business model. Scales across Baby, Mobility, and Party categories. Reduces support overhead and improves signup conversion.
                   </h5>
                 </div>
-                <div class="accIcon iconAccTrigger align-right"></div>
+                <div class="accIcon align-right"></div>
               </div>
             </div>
           </div>
@@ -366,7 +366,7 @@
 
     <div class="wrapper">
       <div class="accItem">
-        <div class="Grid Grid--full Grid--gutter Grid--top accTrigger">
+        <div class="Grid Grid--gutter Grid--top accTrigger">
           <div class="Grid-cell">
             <div class="element">
               <div class="row">
@@ -375,7 +375,7 @@
                   <h5>Led redesign of onboarding and booking flows for pet businesses — from account setup to appointment checkout. Simplified workflows, improved signup completion, and reduced booking friction.
                   </h5>
                 </div>
-                <div class="accIcon iconAccTrigger align-right"></div>
+                <div class="accIcon align-right"></div>
               </div>
             </div>
           </div>
@@ -480,7 +480,7 @@
     </div>
     <div class="wrapper">
       <div class="accItem">
-        <div class="Grid Grid--full Grid--gutter Grid--top accTrigger">
+        <div class="Grid Grid--gutter Grid--top accTrigger">
           <div class="Grid-cell">
             <div class="element">
               <div class="row">
@@ -490,7 +490,7 @@
                   </h5>
 
                 </div>
-                <div class="accIcon iconAccTrigger align-right"></div>
+                <div class="accIcon align-right"></div>
               </div>
             </div>
           </div>
@@ -575,7 +575,7 @@
     </div>
     <div class="wrapper">
       <div class="accItem">
-        <div class="Grid Grid--full Grid--gutter Grid--top accTrigger">
+        <div class="Grid Grid--gutter Grid--top accTrigger">
           <div class="Grid-cell">
             <div class="element">
               <div class="row">
@@ -584,7 +584,7 @@
                   <h5>Improved QP selection, checkout clarity, and item detail polish on responsive web. Supported growth-stage fixes pre-launch to reduce drop-off. </h5>
 
                 </div>
-                <div class="accIcon iconAccTrigger align-right"></div>
+                <div class="accIcon align-right"></div>
               </div>
             </div>
           </div>
@@ -657,7 +657,7 @@
     </div>
     <div class="wrapper">
       <div class="accItem">
-        <div class="Grid Grid--full Grid--gutter Grid--top accTrigger">
+        <div class="Grid Grid--gutter Grid--top accTrigger">
           <div class="Grid-cell">
             <div class="element">
               <div class="row">
@@ -666,7 +666,7 @@
                   <h5>Designed full B2C checkout for pet owners. Supported simplified business owner's landing page, easy to find service then start booking, flexible add-ons, and reduced booking time to under 1 minute.</h5>
 
                 </div>
-                <div class="accIcon iconAccTrigger align-right"></div>
+                <div class="accIcon align-right"></div>
               </div>
             </div>
           </div>
@@ -752,7 +752,7 @@
     </div>
     <div class="wrapper">
       <div class="accItem">
-        <div class="Grid Grid--full Grid--gutter Grid--top accTrigger">
+        <div class="Grid Grid--gutter Grid--top accTrigger">
           <div class="Grid-cell">
             <div class="element">
               <div class="row">
@@ -761,7 +761,7 @@
                   <h5>Audited the entire BabyQuip rental flow and re-mapped it from system logic to UX wireframes. Reduced downstream bugs and improved conversion clarity.</h5>
 
                 </div>
-                <div class="accIcon iconAccTrigger align-right"></div>
+                <div class="accIcon align-right"></div>
               </div>
             </div>
           </div>
@@ -840,7 +840,7 @@
     </div>
     <div class="wrapper">
       <div class="accItem">
-        <div class="Grid Grid--full Grid--gutter Grid--top accTrigger">
+        <div class="Grid Grid--gutter Grid--top accTrigger">
           <div class="Grid-cell">
             <div class="element">
               <div class="row">
@@ -849,7 +849,7 @@
                   <h5>Connected emotional journey map (curiosity → trust → satisfaction) with business funnel (awareness → conversion). Used this to guide design scope and prioritization.</h5>
 
                 </div>
-                <div class="accIcon iconAccTrigger align-right"></div>
+                <div class="accIcon align-right"></div>
               </div>
             </div>
           </div>
@@ -928,7 +928,7 @@
     </div>
     <div class="wrapper">
       <div class="accItem">
-        <div class="Grid Grid--full Grid--gutter Grid--top accTrigger">
+        <div class="Grid Grid--gutter Grid--top accTrigger">
           <div class="Grid-cell">
             <div class="element">
               <div class="row">
@@ -937,7 +937,7 @@
                   <h5>Proposed scalable system refactor in response to single-feature request. Used structural thinking to replace tab-based patch with long-term IA clarity.</h5>
 
                 </div>
-                <div class="accIcon iconAccTrigger align-right"></div>
+                <div class="accIcon align-right"></div>
               </div>
             </div>
           </div>
